# examples

./: .gitignore  .prettierignore  ARCHIVE.md  CONTRIBUTING.md  Makefile  README  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.ts
.github/: pull_request_template.md
.reports/: dep-licenses.csv
_common/: README  README.md  docker-compose.yml
django-ory-cloud/: .gitignore  .prettierignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test.sh
django-ory-cloud/.devcontainer/: devcontainer.json
django-ory-cloud/kratos/: kratos.yml
django-ory-cloud/mysite/: manage.py
django-ory-cloud/mysite/mysite/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
django-ory-cloud/mysite/templates/: base.html
django-ory-cloud/tests/playwright/: django-ory-cloud.spec.ts  helpers.ts
dotnet-ory-network/: Makefile  README.md  package-lock.json  package.json  test.sh
elixir-ory-cloud/: .formatter.exs  .gitignore  (+1 more)
ory-full-stack/api/: .flake8  Dockerfile  autoapp.py  pyproject.toml
ory-full-stack/api/app/: apispec.py  app.py  common.py  extensions.py  security.py
ory-full-stack/api/app/api/: __init__.py  views.py
ory-full-stack/api/app/api/resource/: __init__.py  comment.py  subreddit.py  thread.py
ory-full-stack/api/app/api/schema/: __init__.py  subreddit.py  thread.py
ory-full-stack/api/app/models/: __init__.py  base.py  constants.py  subreddit.py  thread.py  user.py
ory-full-stack/api/app/public/: views.py
ory-full-stack/api/config/: settings.py
ory-full-stack/api/tests/: conftest.py
ory-full-stack/consent/: entrypoint.sh  pyproject.toml
ory-full-stack/consent/app/: app.py  common.py  extensions.py  middleware.py  security.py
ory-full-stack/consent/app/models/: __init__.py  app.py  user.py
ory-full-stack/consent/app/public/: __init__.py  forms.py  views.py
ory-full-stack/consent/app/templates/: base.html
ory-full-stack/consent/app/templates/oauth/: consent.html  create_client.html  list_client.html
ory-full-stack/consent/config/: settings.py
ory-full-stack/consent/migrations/versions/: 0ac3af36c394_app.py  9c87d87ff3c1_initial.py
(+964 files in other folders)
