[tool.poetry]
name = "django-ory-cloud"
version = "0.1.0"
description = "An example django application with Ory Cloud as an Authentication backend"
authors = ["Andrew Minkin <minkin.andrew@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-environ = "^0.8.1"
django-ory-auth = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
